# linker-fun

./: CMakeLists.txt  Makefile  README.md  main.cpp
common/: CMakeLists.txt
common/language/: CMakeLists.txt  lang.cpp  lang.hpp
common/phrases/: CMakeLists.txt  phrases.cpp  phrases.hpp
languages/: CMakeLists.txt
languages/english/: CMakeLists.txt  english.cpp
languages/spanish/: CMakeLists.txt  spanish.cpp
